--- a/GWAS.ipynb
+++ b/GWAS.ipynb
@@ -288,6 +288,31 @@
       }
     },
     {
+      "cell_type": "code",
+      "source": [
+        "result_SNP ,result_P_value, result_significant_SNP ,count=[],[],[],0\n",
+        "    effective_p_value=5*10**(-8)\n",
+        "    for index in dataset.index:\n",
+        "      c_case,c_control=dataset['Case_Num_C_Allele'][index] , dataset['Control_Num_C_Allele'][index]\n",
+        "      t_case,t_control=dataset['Case_Num_T_Allele'][index] , dataset['Control_Num_T_Allele'][index]\n",
+        "      table= np.array([[c_case, t_case], [c_control, t_control]])\n",
+        "      oddscore, p = fisher_exact(table, alternative='greater')\n",
+        "      result_SNP.append(dataset['SNP'][index])\n",
+        "      result_P_value.append(p)\n",
+        "      if p>effective_p_value:\n",
+        "        result_significant_SNP.append('flase')\n",
+        "      if p<effective_p_value:\n",
+        "        result_significant_SNP.append('true')\n",
+        "        count=count+1\n",
+        "    print('significant SNPs with given effective P value is',count)"
+      ],
+      "metadata": {
+        "id": "rCK8-5BzhnK3"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
       "cell_type": "markdown",
       "source": [
         "# **Bonferroni-corrected p-values**"
